<resources>
    <string name="app_name">SportsScores</string>
    <string name="football_scores">Football Scores</string>
    <string name="basketball_scores">Basketball Scores</string>
    <string name="date_bb">date</string>
    <string name="logo_bb">All matches</string>
    <string name="stand_west">Standings West</string>
    <string name="stand_east">Standings East</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="serie_a">Serie A</string>
    <string name="la_liga">La Liga</string>
    <string name="premier_league">Premier League</string>
    <string name="all_leagues">All leagues</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>